# LoMongo

./: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.js  messages.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: api_mongo.rs  mod.rs
src-tauri/src/core/: mod.rs  mongo.rs  server_key.rs  ssh_mongo.rs
src-tauri/src/test/: mod.rs  q2b_test.rs
src-tauri/src/utils/: crypt.rs  io_op.rs  mod.rs  q2b.rs
src/components/: about.vue  coll.vue  collections.vue  query.vue  server.vue
src/locales/: en.js  zh.js
src/router/: index.js
