[package]
name = "LoMongo"
version = "0.1.0"
description = "Client for MongoDB data browsing and retrieval"
authors = ["leleo<leleo886@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lomongo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
mongodb = "3.2.5"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
tauri-plugin-store = "2"
thiserror = "2.0.16"
json5 = "0.4.1"
aes-gcm = "0.10"   
argon2 = "0.5"   
rand_core = "0.9.3"    
hex = "0.4"    
anyhow = "1"
base64 = "0.22.1"
regex = "1.11.2"
tauri-plugin-os = "2"
async-ssh2-tokio = "0.9.1"
russh = "0.52.1"
russh-keys = "0.49.2"
tauri-plugin-log = "2"
log = "0.4"

